crates/review-buddy/tests/snapshots/conversation__conversation_100x30_dusk.snap
---
source: crates/review-buddy/tests/conversation.rs
expression: "demo_frame(\"dusk\", (100, 30))"
---
 review buddy  ·  demo · 4 sources · 7 changes                                                 Dusk
  1 ● All 7   2 ● liminal-hq 3   3 ● smorris 1   4 ● platform 2   5 ● gitlab.com 1
╭ queue ───────────────────────────────────────────────────────────────────────────────────────────╮
│  Waiting on you · 2                                                                              │
│  ◐ Add a menu bar and keyboard-driven menus                                                   2h │
│  GH review-buddy#214 · ada · review requested                                                    │
│  ● Raise muted text contrast in the light theme                                               5h │
│  GH review-buddy#209 · jo · approved by you                                                      │
│                                                                                                  │
│  Worth a look · 2                                                                                │
│  ✕ Cache pipeline status lookups                                                              7h │
│  GL flow!1182 · priya · you're mentioned                                                         │
│▌ ● Tidy zsh startup                                                                           1d │
│▌ GH dotfiles#31 · smorris · yours                                                                │
│                                                                                                  │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ smorris/dotfiles#31 ────────────────────────────────────────────────────────────────────────── ▼ ╮
│ Tidy zsh startup                                                                                 │
│ smorris wants tidy-zsh → main                                                                    │
│ +1 −1 · 1 file · opened 4d ago                                                                   │
│ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                                         │
│  Overview   Files 1   Checks 1   Conversation 5                                                  │
│ ──────────────────────────────────────────────────────────────────────────────────────────────── │
│ 5 comments in 3 threads                                                                          │
│ n and N move between threads · z folds one · Z folds all · c replies · ⏎ opens the line in the   │
│ diff                                                                                             │
│                                                                                                  │
│ › ▸ .zshrc:9 · resolved · 2 comments · folded, z expands                                         │
╰──────────────────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit
