crates/review-buddy/tests/snapshots/conversation__conversation_160x40_no_colour.snap
---
source: crates/review-buddy/tests/conversation.rs
expression: plain_dump(&mut app)
---
 review buddy  ·  demo · 4 sources · 7 changes                                                                                                       Liminal HQ
╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮╭ smorris/dotfiles#31 ──────────────────────────────────────────────────────────── ⟩ ╮
│▌ ● All               7 ││  Waiting on you · 2                          ││ Tidy zsh startup                                                                   │
│    every source        ││  ◐ Add a menu bar and keyboard-driven me… 2h ││ smorris wants tidy-zsh → main                                                      │
│  ● liminal-hq        3 ││  GH review-buddy#214 · ada · review requested││ +1 −1 · 1 file · opened 4d ago                                                     │
│    github.com          ││  ● Raise muted text contrast in the ligh… 5h ││                                                                                    │
│  ● smorris           1 ││  GH review-buddy#209 · jo · approved by you  ││ a Approve  x Request changes  c Comment  ⏎ Diff  m Merge                           │
│    github.com          ││                                              ││                                                                                    │
│  ● platform          2 ││  Worth a look · 2                            ││  Overview   Files 1   Checks 1   Conversation 5                                    │
│    gitlab.platform.ex… ││  ✕ Cache pipeline status lookups          7h ││ ────────────────────────────────────────────────────────────────────────────────── │
│  ● gitlab.com        1 ││  GL flow!1182 · priya · you're mentioned     ││ › ▾ general · 2 comments                                                           │
│    gitlab.com          ││▌ ● Tidy zsh startup                       1d ││   ada · 10h ago                                                                    │
│                        ││▌ GH dotfiles#31 · smorris · yours            ││     Looks good overall. Before you merge, a few things worth thinking about with   │
│  Show  s to change     ││                                              ││     the cached dump:                                                               │
│  [x] reviewing         ││  Can wait · 1                                ││                                                                                    │
│  [x] assigned          ││  · Clarify the install steps              3d ││     • The dump goes stale when fpath changes. Installing a new completion won't    │
│  [x] authored          ││  GL notes!12 · kai · approved by you         ││     show up until the file is rebuilt, which is the sort of bug that is very hard  │
│  [ ] drafts            ││                                              ││     to spot a month from now.                                                      │
│  [ ] noise             ││  ▸ Noise · 2 bot updates · ⏎ to expand       ││     • Two shells starting at once can both decide to rebuild it. Writing to a      │
│                        ││                                              ││     temporary file and renaming it keeps a half-written dump from ever being read. │
│                        ││  ── That's everything.                       ││     • compinit -C skips the security check on the files it finds, so a             │
│                        ││  7 in this view.                             ││     world-writable directory on fpath would go unnoticed. Is that a trade you want │
│                        ││                                              ││     to make on every machine this file lands on?                                   │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││     One way to cover the first two:                                                │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││     if [[ -n ${ZDOTDIR:-$HOME}/.zcompdump(#qN.mh+24) ]]; then                      │
│                        ││                                              ││     compinit -d "$tmp" && mv "$tmp" "${ZDOTDIR:-$HOME}/.zcompdump"                 │
│                        ││                                              ││     else                                                                           │
│                        ││                                              ││     compinit -C                                                                    │
│                        ││                                              ││     fi                                                                             │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││     That rebuilds once a day and uses the cache the rest of the time. I would      │
│                        ││                                              ││     still add a way to force a rebuild by hand, such as a rehash-completions       │
│                        ││                                              ││     function, so nobody has to remember where the file lives.                      │
│                        ││                                              ││                                                                                    │
│                        ││                                              ││   smorris · 4h ago                                                                 │
│                        ││                                              ││     Good call on the rename. I'll take the once-a-day rebuild and add the helper;  │
╰────────────────────────╯╰──────────────────────────────────────────────╯╰────────────────────────────────────────────────────────────────────────────────────╯
 ⏎ diff  o open  y copy  s show filters  ? help  T theme  q quit

-- modifiers --
0:1 B "review buddy"
0:13 D "  ·  demo · 4 sources · 7 changes"
0:148 D " Liminal HQ"
1:0 D "╭ sources ───────────────╮╭ queue ───────────────────────────────────────╮"
1:74 B "╭ smorris/dotfiles#31 ────────────────────────────────────────────────────────────"
1:156 BD " ⟩"
1:159 B "╮"
2:0 D "│"
2:1 DR "▌"
2:3 BR "● All"
2:8 R ""
2:23 DR "7"
2:25 D "││"
2:29 B "Waiting on you"
2:43 D " · 2"
2:73 D "│"
2:74 B "│"
2:76 B "Tidy zsh startup"
2:159 B "│"
3:0 D "│"
3:1 R ""
3:5 DR "every source"
3:17 R ""
3:25 D "││"
3:70 D "2h │"
3:74 B "│"
3:83 D " wants"
3:98 D " →"
3:159 B "│"
4:0 D "│"
4:23 D "3 ││"
4:48 D " ·"
4:54 D " · review requested│"
4:74 B "│"
4:79 B "−1"
4:81 D " · 1 file · opened 4d ago"
4:159 B "│"
5:0 D "│"
5:5 D "github.com"
5:25 D "││"
5:70 D "5h │"
5:74 B "│"
5:159 B "│"
6:0 D "│"
6:23 D "1 ││"
6:48 D " ·"
6:53 D " · approved by you"
6:73 D "│"
6:74 B "│"
6:76 B "a"
6:87 B "x"
6:106 B "c"
6:117 B "⏎"
6:125 B "m"
6:159 B "│"
7:0 D "│"
7:5 D "github.com"
7:25 D "││"
7:73 D "│"
7:74 B "│"
7:159 B "│"
8:0 D "│"
8:23 D "2 ││"
8:29 B "Worth a look"
8:41 D " · 2"
8:73 D "│"
8:74 B "│"
8:76 D " Overview"
8:87 D " Files 1"
8:97 D " Checks 1"
8:108 BR " Conversation 5"
8:159 B "│"
9:0 D "│"
9:5 D "gitlab.platform.ex…"
9:25 D "││"
9:29 B "✕"
9:70 D "7h │"
9:74 B "│"
9:76 D "──────────────────────────────────────────────────────────────────────────────────"
9:159 B "│"
10:0 D "│"
10:23 D "1 ││"
10:41 D " ·"
10:49 D " · you're mentioned"
10:73 D "│"
10:74 B "│"
10:76 BR "› ▾ general"
10:87 DR " · 2 comments"
10:159 B "│"
11:0 D "│"
11:5 D "gitlab.com"
11:25 D "││"
11:27 DR "▌"
11:29 R "●"
11:31 BR "Tidy zsh startup"
11:47 R ""
11:70 DR "1d"
11:73 D "│"
11:74 B "│"
11:81 D " · 10h ago"
11:159 B "│"
12:0 D "│"
12:25 D "││"
12:27 DR "▌"
12:29 R "GH dotfiles#31"
12:43 DR " ·"
12:46 R "smorris"
12:53 DR " · yours"
12:61 R ""
12:73 D "│"
12:74 B "│"
12:159 B "│"
13:0 D "│"
13:3 BD "Show"
13:7 D "  s to change"
13:25 D "││"
13:73 D "│"
13:74 B "│"
13:159 B "│"
14:0 D "│"
14:25 D "││"
14:29 B "Can wait"
14:37 D " · 1"
14:73 D "│"
14:74 B "│"
14:159 B "│"
15:0 D "│"
15:25 D "││"
15:29 D "·"
15:70 D "3d │"
15:74 B "│"
15:159 B "│"
16:0 D "│"
16:25 D "││"
16:40 D " ·"
16:46 D " · approved by you"
16:73 D "│"
16:74 B "│"
16:159 B "│"
17:0 D "│"
17:3 D "[ ] drafts"
17:25 D "││"
17:73 D "│"
17:74 B "│"
17:159 B "│"
18:0 D "│"
18:3 D "[ ] noise"
18:25 D "││"
18:29 D "▸ Noise · 2 bot updates · ⏎ to expand"
18:73 D "│"
18:74 B "│"
18:159 B "│"
19:0 D "│"
19:25 D "││"
19:73 D "│"
19:74 B "│"
19:159 B "│"
20:0 D "│"
20:25 D "││"
20:29 D "── That's everything."
20:73 D "│"
20:74 B "│"
20:159 B "│"
21:0 D "│"
21:25 D "││"
21:29 D "7 in this view."
21:73 D "│"
21:74 B "│"
21:159 B "│"
22:0 D "│"
22:25 D "││"
22:73 D "│"
22:74 B "│"
22:159 B "│"
23:0 D "│"
23:25 D "││"
23:73 D "│"
23:74 B "│"
23:159 B "│"
24:0 D "│"
24:25 D "││"
24:73 D "│"
24:74 B "│"
24:159 B "│"
25:0 D "│"
25:25 D "││"
25:73 D "│"
25:74 B "│"
25:159 B "│"
26:0 D "│"
26:25 D "││"
26:73 D "│"
26:74 B "│"
26:159 B "│"
27:0 D "│"
27:25 D "││"
27:73 D "│"
27:74 B "│"
27:159 B "│"
28:0 D "│"
28:25 D "││"
28:73 D "│"
28:74 B "│"
28:159 B "│"
29:0 D "│"
29:25 D "││"
29:73 D "│"
29:74 B "│"
29:159 B "│"
30:0 D "│"
30:25 D "││"
30:73 D "│"
30:74 B "│"
30:159 B "│"
31:0 D "│"
31:25 D "││"
31:73 D "│"
31:74 B "│"
31:159 B "│"
32:0 D "│"
32:25 D "││"
32:73 D "│"
32:74 B "│"
32:159 B "│"
33:0 D "│"
33:25 D "││"
33:73 D "│"
33:74 B "│"
33:159 B "│"
34:0 D "│"
34:25 D "││"
34:73 D "│"
34:74 B "│"
34:159 B "│"
35:0 D "│"
35:25 D "││"
35:73 D "│"
35:74 B "│"
35:159 B "│"
36:0 D "│"
36:25 D "││"
36:73 D "│"
36:74 B "│"
36:85 D " · 4h ago"
36:159 B "│"
37:0 D "│"
37:25 D "││"
37:73 D "│"
37:74 B "│"
37:159 B "│"
38:0 D "╰────────────────────────╯╰──────────────────────────────────────────────╯"
38:74 B "╰────────────────────────────────────────────────────────────────────────────────────╯"
39:1 B "⏎"
39:2 D " diff"
39:9 B "o"
39:10 D " open"
39:17 B "y"
39:18 D " copy"
39:25 B "s"
39:26 D " show filters"
39:41 B "?"
39:42 D " help"
39:49 B "T"
39:50 D " theme"
39:58 B "q"
39:59 D " quit"
